- bump versions of dependencies - emit a useful console error message when the origin doesn't match the redirect uri origin, which will prevent the iframe from working - defer accessing window.localStorage so we don't fail when third-party cookies are disabled. - properly detect chrome on iOS - fix drop shadow - emit WatchToken callbacks to the current page when updating the token - Add support for custom signin buttons - SDK improvements to support m2m on Android - fix race in PKCE - update readme
[published from upsteam revision: 193a810e]

--- a/src/popup.css
+++ b/src/popup.css
@@ -12,9 +12,9 @@
 }
 
 .nt-popup-bg {
-
     position: absolute;
     filter:   drop-shadow(0px 6px 24px rgba(0, 0, 0, 0.2));
+    will-change: filter;
     width: 176px;
     height: 287px;
 }
